# validated_newtype

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
